# eplink-redcap2bids

./: LICENSE  README.md  Snakefile  config.yml  pyproject.toml
scripts/: create_participants_tsv.py
