[tool.poetry]
name = "eplink-redcap2bids-tsv"
version = "0.1.0"
description = ""
authors = ["Ali Khan <alik@robarts.ca>"]
readme = "README.md"
packages = [{include = "eplink_redcap2bids_tsv"}]

[tool.poetry.dependencies]
python =  ">=3.9,<4.0"
snakemake = "^7.32.4"
pycap = "^2.6.0"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
